@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.218 2005/02/14 22:14:48 cube Exp $
+# $NetBSD: Makefile,v 1.219 2005/02/15 21:07:01 rillig Exp $
 #
 
-DISTNAME=	pkglint-4.04
+DISTNAME=	pkglint-4.05
 CATEGORIES=	pkgtools devel
 MASTER_SITES=	# empty
 DISTFILES=	# empty
